[project]
name = "pystonic"
version = "0.1.0"
description = "Python 应用基石"
readme = "README.md"
authors = [{ name = "BytemanD", email = "byteman.e@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "humanize>=4.15.0",
    "loguru>=0.7.3",
    "prettytable>=3.17.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "termcolor>=3.3.0",
]

[project.scripts]
pystonic = "pystonic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[[tool.uv.index]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
