[project]
name = "pystonic"
dynamic = ["version"]
description = "Python 应用基石"
readme = "README.md"
authors = [{ name = "BytemanD", email = "byteman.e@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "humanize>=4.15.0",
    "loguru>=0.7.3",
    "pydantic",
    "pydantic-settings[toml]>=2.13.1",
    "termcolor>=3.3.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
rich = [
    "rich>=14.3.3",
]
prettytable = [
    "prettytable>=3.17.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
]

[[tool.uv.index]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
explicit = true


[tool.pytest]
minversion = "9.0"
addopts = ["-ra"]
